# winter-wonderlights

./: .env  .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  Cross.toml  README.md  coords.gift  deny.toml  flake.nix  justfile  rust-toolchain.toml
.github/setup/: action.yaml
.github/workflows/: bench.yaml  check.yaml  ci.yaml
benches/: effects.rs
data/: .gitignore
data/coords/: 2023-small-tree.gift
dev/bench/: data.js
drivers/debug/: Cargo.toml
drivers/debug/src/: lib.rs
drivers/raspi-ws2811/: Cargo.toml
drivers/raspi-ws2811/src/: lib.rs
drivers/virtual-tree/: Cargo.toml
drivers/virtual-tree/src/: lib.rs
drivers/virtual-tree/virtual-tree-runner/: Cargo.toml
drivers/virtual-tree/virtual-tree-runner/src/: bevy_setup.rs  main.rs
drivers/virtual-tree/virtual-tree-shared/: Cargo.toml
drivers/virtual-tree/virtual-tree-shared/src/: lib.rs
gift-coord-editor/: Cargo.toml
gift-coord-editor/src/: driver.rs  main.rs  parse.rs
scanner/client/: Cargo.toml  droidcam_bodge.sh  index.html
scanner/client/src/: app.rs  camera.rs  controller.rs  generic_client.rs  main.rs
scanner/client/src/controller/: direction_widget.rs  mod.rs
scanner/server/: Cargo.toml  build.rs
scanner/server/src/: drivers.rs  gift.rs  logging.rs  main.rs  run_server.rs  scan_manager.rs  state.rs
scanner/server/src/drivers/: mod.rs
scanner/shared/: Cargo.toml
scanner/shared/src/: lib.rs
shared/server-tls/: Cargo.toml
shared/server-tls/src/: lib.rs
src/: lib.rs  main.rs
src/drivers/: mod.rs
src/drivers/virtual_tree/: bevy_setup.rs  config.rs  mod.rs
src/effects/: debug.rs  list.rs  maths.rs  mod.rs  traits.rs
src/effects/aesthetic/: lava_lamp.rs
src/effects/aesthetic/snapshots/: winter_wonderlights__effects__aesthetic__lava_lamp__tests__lava_lamp_test.snap
src/effects/maths/: plane.rs
src/effects/maths/snapshots/: winter_wonderlights__effects__maths__plane__tests__moving_plane_test.snap
src/effects/snapshots/: winter_wonderlights__effects__maths__tests__moving_plane_test.snap
src/frame/: mod.rs  object.rs
src/frame/snapshots/: winter_wonderlights__frame__tests__to_raw_data_test.snap
src/gift_coords/: int_coords.txt  mod.rs
src/vecs/: mod.rs  ops.rs  traits.rs
ww-benchmarks/: Cargo.toml
ww-benchmarks/benches/: effects.rs
ww-client/: Cargo.toml  index.html
ww-client/src/: app.rs  main.rs
ww-driver-impl/: Cargo.toml
ww-driver-impl/src/: lib.rs
ww-driver-impl/src/virtual_tree/: mod.rs
ww-driver-trait/: Cargo.toml
ww-driver-trait/src/: lib.rs
ww-drivers/: Cargo.toml
ww-drivers/src/: lib.rs
ww-drivers/src/virtual_tree/: config.rs
ww-effects/: Cargo.toml
ww-effects/effect-proc-macros/: Cargo.toml
ww-effects/effect-proc-macros/src/: derive.rs  end_loop.rs  generate_lists_and_impls.rs  lib.rs
ww-effects/src/: debug.rs  lib.rs  list.rs  traits.rs
ww-effects/src/aesthetic/: lava_lamp.rs  mod.rs
ww-effects/src/effects/: debug.rs  mod.rs
ww-effects/src/effects/aesthetic/: lava_lamp.rs  mod.rs
ww-effects/src/effects/aesthetic/snapshots/: ww_effects__aesthetic__lava_lamp__tests__lava_lamp_test.snap  ww_effects__effects__aesthetic__lava_lamp__tests__lava_lamp_test.snap
ww-effects/src/effects/computational/: ai_snake.rs  mod.rs
ww-effects/src/effects/computational/snapshots/: ww_effects__effects__computational__ai_snake__tests__ai_snake_test.snap
ww-effects/src/effects/debug/: binary_index.rs  mod.rs  one_by_one.rs
ww-effects/src/effects/debug/snapshots/: ww_effects__effects__debug__binary_index__tests__debug_binary_index_test.snap  ww_effects__effects__debug__one_by_one__tests__debug_one_by_one_test.snap
ww-effects/src/effects/maths/: mod.rs  moving_plane.rs  plane.rs  split_plane.rs
ww-effects/src/effects/maths/snapshots/: ww_effects__effects__maths__moving_plane__tests__moving_plane_test.snap  ww_effects__effects__maths__plane__tests__moving_plane_test.snap  ww_effects__effects__maths__split_plane__tests__split_plane_test.snap
ww-effects/src/maths/: mod.rs  plane.rs
ww-effects/src/maths/snapshots/: winter_wonderlights__effects__maths__plane__tests__moving_plane_test.snap  ww_effects__maths__plane__tests__moving_plane_test.snap
ww-frame/: Cargo.toml
ww-frame/src/: frame.rs  lib.rs  object.rs
ww-frame/src/object/: basic_shapes.rs  mod.rs  planes.rs  splines.rs
ww-frame/src/snapshots/: ww_frame__frame__tests__to_raw_data_test-10.snap  ww_frame__frame__tests__to_raw_data_test-11.snap  ww_frame__frame__tests__to_raw_data_test-12.snap  ww_frame__frame__tests__to_raw_data_test-13.snap  ww_frame__frame__tests__to_raw_data_test-2.snap  ww_frame__frame__tests__to_raw_data_test-3.snap  ww_frame__frame__tests__to_raw_data_test-4.snap  ww_frame__frame__tests__to_raw_data_test-5.snap  ww_frame__frame__tests__to_raw_data_test-6.snap  ww_frame__frame__tests__to_raw_data_test-7.snap  ww_frame__frame__tests__to_raw_data_test-8.snap  ww_frame__frame__tests__to_raw_data_test-9.snap  ww_frame__frame__tests__to_raw_data_test.snap  ww_frame__tests__to_raw_data_test.snap
ww-gift-coords/: Cargo.toml
ww-gift-coords/src/: float_coords.txt  lib.rs
ww-proc-macros/: Cargo.toml
ww-proc-macros/src/: lib.rs
ww-server/: Cargo.toml  build.rs
ww-server-client-msgs/: Cargo.toml
ww-server-client-msgs/src/: lib.rs
ww-server/src/: drivers.rs  logging.rs  main.rs  run_effect.rs  run_server.rs
ww-server/src/drivers/: debug.rs  mod.rs
ww-shared/: Cargo.toml
ww-shared-msgs/: Cargo.toml
ww-shared-msgs/src/: lib.rs
ww-shared/src/: lib.rs
ww-virtual-tree/: Cargo.toml
ww-virtual-tree/src/: main.rs
ww-virtual-tree/src/virtual_tree/: bevy_setup.rs  config.rs  mod.rs
