[workspace]
resolver = "2"
members = ["ww-benchmarks", "ww-client", "ww-driver-trait", "ww-effects", "ww-frame", "ww-gift-coords", "ww-proc-macros", "ww-server", "ww-shared-msgs", "ww-virtual-tree"]

[workspace.dependencies]
async-trait = "0.1.64"
cfg-if = "1.0.0"
color-eyre = "0.6.2"
egui = "0.20.1"
glam = { version = "0.23.0", features = ["rand"] }
lazy_static =  "1.4.0"
rand = "0.8.5"
ron = "0.8.0"
serde = { version = "1.0.152", features = ["derive"] }
strum = { version = "0.24.1", features = ["derive"] }
tokio = { version = "1.25.0", features = ["macros", "rt", "time", "sync"] }
tracing = { version = "0.1.37", features = ["max_level_debug", "release_max_level_info"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-unwrap = "0.10.0"

# testing
float-cmp = "0.9.0"
insta = { version = "1.26.0", features = ["ron"] }

[profile.dev.package."*"]
opt-level = 3
