[workspace]
resolver = "2"
members = ["drivers/raspi-ws2811", "drivers/virtual-tree", "scanner/client", "scanner/server", "scanner/shared", "shared/server-tls", "ww-benchmarks", "ww-client", "ww-driver-trait", "ww-effects", "ww-frame", "ww-gift-coords", "ww-server", "ww-shared"]

[workspace.package]
authors = ["Dyson Dyson <dyson.dyson@icloud.com>"]
edition = "2021"
publish = false
repository = "https://github.com/DoctorDalek1963/winter-wonderlights"
license = "GPL-3.0"

[workspace.dependencies]
bincode = "1.3.3"
cfg-if = "1.0.0"
color-eyre = "0.6.2"
egui = "0.22.0"
glam = { version = "0.24.0", features = ["rand"] }
interprocess = "1.2.1"
lazy_static =  "1.4.0"
rand = "0.8.5"
ron = "0.8.0"
serde = "1.0.163"
strum = "0.24.1"
thiserror = "1.0.48"
tokio = "1.28.1"
tokio-rustls = "0.24.1"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing-unwrap = "0.10.0"

ww-driver-trait = { path = "./ww-driver-trait" }
ww-effects = { path = "./ww-effects" }
ww-frame = { path = "./ww-frame" }
ww-gift-coords = { path = "./ww-gift-coords" }
ww-shared = { path = "./ww-shared" }
ww-shared-server-tls = { path = "./shared/server-tls" }

# testing
float-cmp = "0.9.0"
insta = { version = "1.29.0", features = ["ron"] }

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "fat"
