[package]
name = "ww-benchmarks"
version = "0.1.0-dev"
authors = ["Dyson Dyson <dyson.dyson@icloud.com>"]
edition = "2021"
description = "The benchmarks for Winter WonderLights."
repository = "https://github.com/DoctorDalek1963/winter-wonderlights"
license = "GPL-3.0"

[dependencies]
criterion = { version = "0.5.0", features = ["async_tokio"] }
strum.workspace = true
tokio.workspace = true
ww-driver-trait.workspace = true
ww-effects = { workspace = true, features = ["bench", "effect-impls"] }
ww-frame.workspace = true

[[bench]]
name = "effects"
harness = false
