[package]
name = "ww-benchmarks"
version = "0.1.0-dev"
description = "The benchmarks for Winter WonderLights."
authors.workspace = true
edition.workspace = true
publish.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
criterion = { version = "0.5.0", features = ["async_tokio"] }
strum.workspace = true
tokio.workspace = true
ww-driver-trait.workspace = true
ww-effects = { workspace = true, features = ["bench", "effect-impls"] }
ww-frame.workspace = true

[[bench]]
name = "effects"
harness = false
