[package]
name = "ww-driver-trait"
version = "0.1.0-dev"
authors = ["Dyson Dyson <dyson.dyson@icloud.com>"]
edition = "2021"
rust-version = "1.65"
description = "The driver trait for Winter WonderLights."
repository = "https://github.com/DoctorDalek1963/winter-wonderlights"
license = "GPL-3.0"

[dependencies]
ww-frame = { path = "../ww-frame" }
