[package]
name = "ww-driver-trait"
version.workspace = true
description = "The driver trait for Winter WonderLights."
authors.workspace = true
edition.workspace = true
publish.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tracing-unwrap.workspace = true
ww-frame.workspace = true
