[package]
name = "ww-effects"
version = "0.1.0-dev"
authors = ["Dyson Dyson <dyson.dyson@icloud.com>"]
edition = "2021"
rust-version = "1.65"
description = "The effects for Winter WonderLights."
repository = "https://github.com/DoctorDalek1963/winter-wonderlights"
license = "GPL-3.0"

[dependencies]
cfg-if.workspace = true
serde = { workspace = true, features = ["derive"] }
strum = { workspace = true, features = ["derive"] }
effect-proc-macros = { path = "./effect-proc-macros" }

# config-trait
egui = { workspace = true, optional = true }
ron = { workspace = true, optional = true }
tracing-unwrap = { workspace = true, optional = true }

# config-impls
heck = { version = "0.4.1", optional = true }

# effect-trait
ww-driver-trait = { workspace = true, optional = true }

# effect-impls
glam = { workspace = true, optional = true, features = ["serde"] }
rand = { workspace = true, optional = true }
tokio = { workspace = true, optional = true, features = ["time"] }
tracing = { workspace = true, optional = true }
ww-frame = { workspace = true, optional = true }
ww-gift-coords = { workspace = true, optional = true }

[features]
default = []
bench = []
config-trait = ["dep:egui", "dep:ron", "dep:tracing-unwrap"]
config-impls = ["config-trait", "dep:heck", "serde/derive"]
effect-trait = ["config-trait", "dep:heck", "dep:ww-driver-trait"]
effect-impls = ["effect-trait", "config-impls", "dep:glam", "dep:rand", "dep:tokio", "dep:tracing", "dep:ww-frame", "dep:ww-gift-coords"]

[dev-dependencies]
insta.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
