[package]
name = "ww-effects"
version = "0.1.0-dev"
description = "The effects for Winter WonderLights."
rust-version = "1.75.0"
authors.workspace = true
edition.workspace = true
publish.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
cfg-if.workspace = true
serde = { workspace = true, features = ["derive"] }
strum = { workspace = true, features = ["derive"] }
effect-proc-macros = { path = "./effect-proc-macros" }

# config-trait
egui = { workspace = true, optional = true }
ron = { workspace = true, optional = true }
tracing-unwrap = { workspace = true, optional = true }

# config-impls
heck = { version = "0.4.1", optional = true }

# effect-trait
ww-driver-trait = { workspace = true, optional = true }

# effect-impls
bitvec = { version = "1.0.1", optional = true }
glam = { workspace = true, optional = true, features = ["serde"] }
ordered-float = { version = "3.9.1", optional = true }
pathfinding = { version = "4.3.1", optional = true }
rand = { workspace = true, optional = true }
tokio = { workspace = true, optional = true, features = ["time"] }
tracing = { workspace = true, optional = true }
ww-frame = { workspace = true, optional = true }
ww-gift-coords = { workspace = true, optional = true }

[features]
default = []
bench = []
config-trait = ["dep:egui", "dep:ron", "dep:tracing-unwrap"]
config-impls = ["config-trait", "dep:heck", "serde/derive"]
effect-trait = ["config-trait", "dep:heck", "dep:ww-driver-trait"]
effect-impls = ["effect-trait", "config-impls", "dep:bitvec", "dep:glam", "dep:ordered-float", "dep:pathfinding", "dep:rand", "dep:tokio", "dep:tracing", "dep:ww-frame", "dep:ww-gift-coords"]

[dev-dependencies]
insta.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
ww-frame = { workspace = true, features = ["insta"] }
