[package]
name = "ww-frame"
version = "0.1.0-dev"
description = "The frame utilities for Winter WonderLights."
authors.workspace = true
edition.workspace = true
publish.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
glam = { workspace = true, features = ["serde"] }
rand.workspace = true
serde = { workspace = true, features = ["derive"] }
tracing.workspace = true
tracing-unwrap.workspace = true
ww-gift-coords.workspace = true

[dev-dependencies]
insta.workspace = true

[features]
insta = []
