[package]
name = "ww-gift-coords"
version = "0.1.0-dev"
authors = ["Dyson Dyson <dyson.dyson@icloud.com>"]
edition = "2021"
rust-version = "1.65"
description = "The GIFT coordinates for Winter WonderLights."
repository = "https://github.com/DoctorDalek1963/winter-wonderlights"
license = "GPL-3.0"

[dependencies]
bincode = "1.3.3"
color-eyre = "0.6.2"
lazy_static = "1.4.0"
serde = { version = "1.0.152", features = ["derive"] }

[dev-dependencies]
float-cmp = "0.9.0"
