[package]
name = "ww-gift-coords"
version = "0.1.0-dev"
authors = ["Dyson Dyson <dyson.dyson@icloud.com>"]
edition = "2021"
description = "The GIFT coordinates for Winter WonderLights."
repository = "https://github.com/DoctorDalek1963/winter-wonderlights"
license = "GPL-3.0"

[dependencies]
bincode = "1.3.3"
color-eyre.workspace = true
lazy_static.workspace = true
serde.workspace = true

[dev-dependencies]
float-cmp.workspace = true
