[package]
name = "ww-gift-coords"
version.workspace = true
description = "The GIFT coordinates for Winter WonderLights."
authors.workspace = true
edition.workspace = true
publish.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
bincode.workspace = true
color-eyre.workspace = true
lazy_static.workspace = true
serde = { workspace = true, features = ["derive"] }
tracing-unwrap.workspace = true

[dev-dependencies]
float-cmp.workspace = true
