[package]
name = "ww-server"
version = "0.1.0-dev"
description = "The server for Winter WonderLights."
authors.workspace = true
edition.workspace = true
publish.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
bincode.workspace = true
cfg-if.workspace = true
color-eyre.workspace = true
futures-util = "0.3.28"
lazy_static.workspace = true
ron.workspace = true
rustls-pemfile = "1.0.2"
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "signal", "sync", "time"] }
tokio-rustls = "0.24.1"
tokio-stream = { version = "0.1.14", features = ["sync"] }
tokio-tungstenite = "0.19.0"
tracing.workspace = true
tracing-appender = "0.2.2"
tracing-subscriber.workspace = true
tracing-unwrap.workspace = true
ww-driver-trait.workspace = true
ww-effects = { workspace = true, features = ["effect-impls"] }
ww-frame.workspace = true
ww-shared.workspace = true

### Optional dependencies for drivers

# driver-virtual-tree
virtual-tree = { path = "../drivers/virtual-tree", optional = true }

[features]
# To let rust-analyzer run faster
default = ["driver-debug"]

# Just log whatever the driver was asked to display at the info level using tracing.
driver-debug = []

# Display the effect on a virtual tree render with Bevy - uses `coords.gift` to work out where the lights are.
driver-virtual-tree = ["dep:virtual-tree"]
