[package]
name = "ww-shared"
version.workspace = true
description = "The shared messages for server/client pair for Winter WonderLights."
authors.workspace = true
edition.workspace = true
publish.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
ron.workspace = true
serde.workspace = true
tracing-unwrap.workspace = true
ww-effects = { workspace = true, features = ["config-impls"] }
