[package]
name = "debug"
version = "0.1.0-dev"
description = "The Winter WonderLights debug driver used for testing purposes."
authors.workspace = true
edition.workspace = true
publish.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tracing.workspace = true
ww-driver-trait.workspace = true
ww-frame.workspace = true
