[package]
name = "raspi-ws2811"
version = "0.1.0-dev"
description = "The Winter WonderLights driver for the WS2811 RGB LEDs for the Raspberry Pi."
authors.workspace = true
edition.workspace = true
publish.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
rs_ws281x = "0.4.4"
tracing.workspace = true
tracing-unwrap.workspace = true
ww-driver-trait.workspace = true
ww-frame.workspace = true
ww-gift-coords.workspace = true
