[package]
name = "raspi-ws2811"
version.workspace = true
description = "The Winter WonderLights driver for the WS2811 RGB LEDs for the Raspberry Pi."
authors.workspace = true
edition.workspace = true
publish.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
rs_ws281x = { git = "https://github.com/DoctorDalek1963/rpi-ws281x-rust.git", version = "0.5.1" }
tracing.workspace = true
tracing-unwrap.workspace = true
ww-driver-trait.workspace = true
ww-frame.workspace = true
