[package]
name = "virtual-tree"
version = "0.1.0-dev"
authors = ["Dyson Dyson <dyson.dyson@icloud.com>"]
edition = "2021"
rust-version = "1.71"
description = "The virtual tree driver for Winter WonderLights."
repository = "https://github.com/DoctorDalek1963/winter-wonderlights"
license = "GPL-3.0"

[dependencies]
tracing.workspace = true
ww-driver-trait = { path = "../../ww-driver-trait" }
ww-frame = { path = "../../ww-frame" }
ww-gift-coords = { path = "../../ww-gift-coords" }

virtual-tree-runner = { path = "./virtual-tree-runner", artifact = "bin" }
