[package]
name = "virtual-tree"
version = "0.1.0-dev"
authors = ["Dyson Dyson <dyson.dyson@icloud.com>"]
edition = "2021"
description = "The virtual tree driver for Winter WonderLights."
repository = "https://github.com/DoctorDalek1963/winter-wonderlights"
license = "GPL-3.0"

[dependencies]
bincode.workspace = true
interprocess.workspace = true
tracing.workspace = true
tracing-unwrap.workspace = true
virtual-tree-runner = { path = "./virtual-tree-runner", artifact = "bin" }
virtual-tree-shared = { path = "./virtual-tree-shared" }
ww-driver-trait.workspace = true
ww-frame.workspace = true
ww-gift-coords.workspace = true
