[package]
name = "virtual-tree"
version.workspace = true
description = "The virtual tree driver for Winter WonderLights."
authors.workspace = true
edition.workspace = true
publish.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
bincode.workspace = true
interprocess.workspace = true
tracing.workspace = true
tracing-unwrap.workspace = true
virtual-tree-runner = { path = "./virtual-tree-runner", artifact = "bin" }
virtual-tree-shared = { path = "./virtual-tree-shared" }
ww-driver-trait.workspace = true
ww-frame.workspace = true
ww-gift-coords.workspace = true
