[package]
name = "ww-scanner-client"
version = "0.1.0-dev"
description = "The client for the scanner part of Winter WonderLights."
authors.workspace = true
edition.workspace = true
publish.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
async-broadcast = "0.5.1"
async-channel = "1.8.0"
bincode.workspace = true
cfg-if.workspace = true
eframe.workspace = true
egui.workspace = true
ewebsock = { version = "0.4.0", features = ["tls"] }
futures = "0.3.28"
image = "0.24"
prokio = "0.1.0"
ron.workspace = true
serde.workspace = true
strum.workspace = true
tracing.workspace = true
tracing-unwrap.workspace = true
ww-scanner-shared = { path = "../shared", features = ["client-impl"] }

# Native
[target.'cfg(not(target_family = "wasm"))'.dependencies]
nokhwa = { version = "0.10.4", default-features = false, features = ["decoding", "flume", "input-native"] }
tracing-subscriber.workspace = true

# WASM
[target.'cfg(target_family = "wasm")'.dependencies]
console_error_panic_hook = "0.1.7"
nokhwa = { version = "0.10.4", default-features = false, features = ["flume", "input-jscam"] }
tracing-wasm = "0.2.1"
