[package]
name = "ww-scanner-server"
version = "0.1.0-dev"
description = "The server for the scanner part of Winter WonderLights."
authors.workspace = true
edition.workspace = true
publish.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
bincode.workspace = true
cfg-if.workspace = true
color-eyre.workspace = true
futures-util = "0.3.28"
lazy_static.workspace = true
tokio = { workspace = true, features = ["macros", "process", "rt", "rt-multi-thread", "signal", "sync", "time"] }
tokio-rustls.workspace = true
tokio-stream = { version = "0.1.14", features = ["sync"] }
tokio-tungstenite = ">=0.20.1"
tracing.workspace = true
tracing-appender = "0.2.2"
tracing-subscriber.workspace = true
tracing-unwrap.workspace = true
ww-driver-trait.workspace = true
ww-frame.workspace = true
ww-gift-coords.workspace = true
ww-scanner-shared = { path = "../shared" }
ww-shared-server-tls.workspace = true

### Optional dependencies for drivers

# driver-debug
debug = { path = "../../drivers/debug", optional = true }

# driver-raspi-ws2811
raspi-ws2811 = { path = "../../drivers/raspi-ws2811", optional = true }

[features]
# To let rust-analyzer run faster
default = ["driver-debug"]

# Just log whatever the driver was asked to display at the info level using tracing.
driver-debug = ["dep:debug"]

# Display the effect on WS2811 RGB LEDs on a Raspberry Pi.
driver-raspi-ws2811 = ["dep:raspi-ws2811"]
