[package]
name = "ww-scanner-shared"
version.workspace = true
description = "The shared messages for server/client pair for the scanner part of Winter WonderLights."
authors.workspace = true
edition.workspace = true
publish.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
bitflags = { version = "2.4.1", features = ["serde"] }
serde.workspace = true
strum = { workspace = true, features = ["derive"] }

[features]
default = []
client-impl = []
