[package]
name = "ww-shared-server-tls"
version = "0.1.0-dev"
description = "A tiny library containing TLS stuff for servers."
authors.workspace = true
edition.workspace = true
publish.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
rustls-pemfile = "1.0.2"
thiserror.workspace = true
tokio-rustls.workspace = true
