[package]
name = "effect-proc-macros"
version = "0.1.0-dev"
description = "A set of proc-macros for the `ww_effects` crate of Winter WonderLights."
authors.workspace = true
edition.workspace = true
publish.workspace = true
repository.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.58"
quote = "1.0.27"
syn = { version = "2.0.16", features = ["derive"] }
