[package]
name = "virtual-tree-runner"
version.workspace = true
description = "The virtual tree runner for Winter WonderLights."
authors.workspace = true
edition.workspace = true
publish.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
bevy = { version = "0.9.1", default-features = false, features = [
	"bevy_asset",
	"dynamic",
	"render",
	"x11",
] }
bincode.workspace = true
interprocess.workspace = true
lazy_static.workspace = true
rand.workspace = true
ron.workspace = true
serde.workspace = true
smooth-bevy-cameras = "0.7.0"
strum.workspace = true
tokio = { workspace = true, features = [
	"macros",
	"rt",
	"rt-multi-thread",
	"sync",
] }
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-unwrap.workspace = true
virtual-tree-shared = { path = "../virtual-tree-shared" }
ww-effects.workspace = true
ww-frame.workspace = true
ww-gift-coords.workspace = true
