[package]
name = "virtual-tree-shared"
version.workspace = true
description = "The shared library for the virtual tree driver/runner for Winter WonderLights."
authors.workspace = true
edition.workspace = true
publish.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
ww-frame.workspace = true
